feat: 세븐일레븐 매장 검색 기능 추가
